Fix scrollbar display

--- a/assets/sass/parts/_layout.scss
+++ b/assets/sass/parts/_layout.scss
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+*::-webkit-scrollbar { 
+    display: none; 
+}
+
 body, html {
     overflow-x: hidden;
     min-height: 100vh;
